Add model validation
