# src/users/usersController.js
@@ -2,14 +2,45 @@ const model = require('./usersModel')
 const bcrypt = require('bcrypt')
 const jwt = require('jsonwebtoken')
 
+// async function buildUser(req){
+//     return  {
+//     }
+// }
+
 module.exports = {
     create : (async (req, res, next) => {
-        user = req.body
-        hashPassword = await bcrypt.hash(req.body.password, Number(process.env.BCRYPT_SALT_ROUNDS))
-        const userCreated = await model.create(req.body)
-        res.status(201).send(userCreated)
+        try {
+            hashPassword = await bcrypt.hash(req.body.password, Number(process.env.BCRYPT_SALT_ROUNDS))
+            user = {
+                name: req.body.name,
+                email: req.body.email,
+                hashPassword: hashPassword        
+            }
+            model.create(user,(err,userCreated) => {
+                if (err){
+                    res.status(400).send({message:err.message})
+                }else {
+                    res.status(201).send(userCreated)                
+                }
+            })
+        } catch (error) {
+            res.status(500).send()
+        }
     }),
     
+    update: (async (req, res, next) => {
+        const id =  req.params.id
+        try {
+            const user =  await model.findById(id)
+            user.name = req.body.name
+            await user.save()
+            res.status(204).send()                
+        } catch (error) {
+            console.log(error)
+            res.status(500).send()
+        }
+    }),
+
     login: (async (req, res, next) => {
         const id =  req.params.id
         const user =  await model.findById(id)
@@ -41,15 +72,7 @@ module.exports = {
         }
     
     }),
-    
-    update: (async (req, res, next) => {
-        const id =  req.params.id
-        const user =  await model.findById(id)
-        user.name = req.body.name
-        await user.save()
-        res.status(204).send()
-    }),
-    
+
     delete: (async (req, res, next) => {
         const id =  req.params.id
         const result =  await model.findById(id)
