# src/users/usersModel.js
@@ -1,9 +1,20 @@
 const mongoose = require('mongoose');
+const emailValidator = require('email-validator')
 
 var userSchema = new mongoose.Schema({
-    name: String,
-    email: String,
-    hashPassword: String
+    name: {
+        type: String, 
+        required:true
+    },
+    email: {
+        type: String, 
+        required:true,
+        validate:emailValidator.validate
+    },
+    hashPassword: {
+        type: String, 
+        required:true
+    },
 }, { collection: 'users' }
 );
 
